--- a/web/css/responsive.css
+++ b/web/css/responsive.css
@@ -133,7 +133,7 @@
 		right: 0;
 		position: absolute;
 		bottom: 0;
-		padding-bottom: 20px; 
+		padding-bottom: 20px;
 		text-align: center;
 	}
 	.social li {
@@ -172,7 +172,7 @@
 		text-align: center;
 	}
 	.main-menu li a {
-		display: inline;	
+		display: inline;
 		font-weight: 500;
 	}
 	.main-menu li a:before {
@@ -180,5 +180,39 @@
 	}
 	.main-menu li a:hover {
 		text-decoration: underline;
+	}
+}
+@media (max-width: 496px) {
+	.subscribe input[type="email"] {
+		display: block;
+		float: left;
+		width: 80% !important;
+		height: 38px;
+		line-height: 38px;
+		padding: 0 20px;
+		font-weight: 300;
+		border: 1px solid #cdcfd0;
+		background: rgba(255, 255, 255, 0.09);
+		font-family: webmdesign !important;
+		font-size: 16px;
+		color: #ffffff;
+	}
+	.btn-class-c{
+		width: 120px;
+		height: 40px;
+		cursor: pointer;
+		background-color: rgba(0,0,0,0);
+		color: #fff;
+		border: 1px solid #ffffff;
+		position: relative;
+		top: 0px;
+		margin-top: 35px;
+		left: 145px;
+	}
+	.social i {
+		margin-right: 20px;
+		cursor: pointer;
+		position: relative;
+		top: -80px;
 	}
 }
